@@ -1083,27 +1083,33 @@
     the elevator reaches a new floor. There is no default; if this is set, the 
     beeps will be automatically enabled.<br>
     Example: <font size="2" face="Courier New, Courier, mono">BeepSound = beep.wav</font></p>
-  <p align="left"><strong>20. FloorSkipText</strong> - sets the text that will 
+  <p align="left"><strong>20. FloorSound</strong> - the sound file(s) to play 
+    when the elevator arrives at a floor; normally this is used for files that 
+    speak the floor number. There is no default; if this is set, the sounds will 
+    be automatically enabled. If an asterisk (*) is specified, it is replaced 
+    with the current floor number.<br>
+    Example: <font size="2" face="Courier New, Courier, mono">FloorSound = floor*.wav</font></p>
+  <p align="left"><strong>21. FloorSkipText</strong> - sets the text that will 
     be shown in the floor indicator when passing non-serviced floors. The texture 
     for this must be loaded for it to show - of you set this to EX for example, 
     the texture it'll load is ButtonEX.jpg. Common values for this are EZ, X, 
     and EX (which stand for Express Zone).<br>
     Example: <font size="2" face="Courier New, Courier, mono">FloorSkipText = 
     EZ </font></p>
-  <p align="left"><strong>21. RecallFloor</strong> - sets the floor the elevator 
+  <p align="left"><strong>22. RecallFloor</strong> - sets the floor the elevator 
     will recall to during fire service phase 1 mode. Default is the lowest serviced 
     floor. <br>
     Example: <font size="2" face="Courier New, Courier, mono">RecallFloor = 5</font></p>
-  <p align="left"><strong>22. AlternateRecallFloor</strong> - sets the alternate 
+  <p align="left"><strong>23. AlternateRecallFloor</strong> - sets the alternate 
     floor the elevator will recall to during fire service phase 1 mode. Default 
     is the highest serviced floor. <br>
     Example: <font size="2" face="Courier New, Courier, mono">AlternateRecallFloor 
     = 6</font></p>
-  <p align="left"><strong>23. ACPFloor</strong> - sets the floor the elevator 
+  <p align="left"><strong>24. ACPFloor</strong> - sets the floor the elevator 
     will stop at while in ACP (Anti-Crime Protection) mode. Default is the lowest 
     serviced floor. <br>
     Example: <font size="2" face="Courier New, Courier, mono">ACPFloor = 5</font></p>
-  <p align="left"><strong>24. Doors</strong> - sets the number of doors the elevator 
+  <p align="left"><strong>25. Doors</strong> - sets the number of doors the elevator 
     will have. The default is 1. Set to 0 in order to have a doorless elevator.<br>
     Example: <font size="2" face="Courier New, Courier, mono">Doors = 2</font></p>
   <p align="left"></p>
